# TestCmake

./: CMakeLists.txt  README.md  clean-build.bat
src/: Helper.cpp  Helper.h  main.cpp
src/Application/: App.cpp  App.h  CameraController.cpp  CameraController.h  InputHandler.cpp  InputHandler.h  Logger.h
src/Application/Games/Pong/: Ball.cpp  Ball.h  Paddle.cpp  Paddle.h  PongGame.cpp  PongGame.h  PongScene.cpp  PongScene.h  PongSceneGUI.cpp  PongSceneGUI.h
src/Application/Games/TurnStrategy/: Settlement.cpp  Settlement.h  TileMap.cpp  TileMap.h  TurnStrategyGUI.cpp  TurnStrategyGUI.h  TurnStrategyGame.cpp  TurnStrategyGame.h  TurnStrategyScene.cpp  TurnStrategyScene.h  Unit.cpp  Unit.h
src/Audio/: AudioManager.cpp  AudioManager.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
src/Entities/: Entity.cpp  Entity.h  IRenderable.cpp  IRenderable.h  ModelRenderable.cpp  ModelRenderable.h  SpriteRenderable.cpp  SpriteRenderable.h
src/Entities/Physics/: Collider.cpp  Collider.h  Collider2.cpp  Collider2.h  PhysicsComponentBase.cpp  PhysicsComponentBase.h  RigidBodyComponent.cpp  RigidBodyComponent.h
src/Entities/Render/: BaseRenderable.cpp  BaseRenderable.h  ModelRenderable.cpp  ModelRenderable.h  SpriteRenderable.cpp  SpriteRenderable.h
src/GUI/: AssimpGUI.cpp  AssimpGUI.h  BasicSceneGUI.cpp  BasicSceneGUI.h  GamesSceneGUI.cpp  GamesSceneGUI.h  ImGuiComponent.cpp  ImGuiComponent.h  MenuGUI.cpp  MenuGUI.h  MenuPage.cpp  MenuPage.h  PhysicsSceneGUI.cpp  PhysicsSceneGUI.h  PongSceneGUI.cpp  PongSceneGUI.h  Scene2dGUI.cpp  Scene2dGUI.h  WIndow.cpp  Window.h
src/Graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShadedObject.cpp  ShadedObject.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
src/Scenes/: AssimpScene.cpp  AssimpScene.h  BasicScene.cpp  BasicScene.h  GameScene.cpp  GamesScene.h  MenuScene.cpp  MenuScene.h  PhysicsScene.cpp  PhysicsScene.h  PongScene.cpp  PongScene.h  Scene.cpp  Scene.h  Scene2d.cpp  Scene2d.h
src/Shaders/: Assimp.frag  MVPShader.frag  MVPTexShader.frag  MVPTexShader.vert  Text2.vert  Texture2d.frag  Texture2d.vert
